--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.23.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.2.2",
+    "fusioncharts": "^3.16.0",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
+    "react-bootstrap": "^1.4.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.1",
+    "react-fusioncharts": "^3.1.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
